--- a/LoginApp/app/src/main/AndroidManifest.xml
+++ b/LoginApp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.example.loginapp">
 
     <application
-        android:name=".MyApplication"
+        android:name=".LoginAppApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
